[gd_scene load_steps=8 format=3 uid="uid://dt08fx6a1pu5a"]

[ext_resource type="Script" path="res://objects/mission_planner/mission_planner.gd" id="1_81h8s"]
[ext_resource type="Texture2D" uid="uid://cj87j7pmkn4on" path="res://sprites/turret_1.png" id="2_6bpic"]
[ext_resource type="Texture2D" uid="uid://cfhpoifxewrv" path="res://sprites/emi_gen.png" id="3_ifrdv"]

[sub_resource type="LabelSettings" id="LabelSettings_uo52u"]
font_size = 32
font_color = Color(0.94902, 0.854902, 0.580392, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mbylg"]
font_size = 24
font_color = Color(0.952941, 0.588235, 0.517647, 1)

[sub_resource type="LabelSettings" id="LabelSettings_djehf"]
font_size = 32
font_color = Color(0.368627, 0.494118, 0.796078, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iqlgw"]
font_size = 24
font_color = Color(0.94902, 0.854902, 0.580392, 1)

[node name="MissionPlanner" type="Node3D"]
script = ExtResource("1_81h8s")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1, 0)
fov = 90.0

[node name="HeaderRect" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_right = 360.0
offset_bottom = 89.0
grow_horizontal = 2
color = Color(0.105882, 0.117647, 0.0509804, 0.501961)

[node name="Header" type="Label" parent="HeaderRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAN_TITLE"
label_settings = SubResource("LabelSettings_uo52u")
horizontal_alignment = 1

[node name="Description" type="Label" parent="HeaderRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "PLAN_SUBTITLE"
label_settings = SubResource("LabelSettings_mbylg")
horizontal_alignment = 1
vertical_alignment = 2

[node name="GridContainer" type="GridContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -325.0
offset_top = -200.0
offset_right = 325.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
columns = 6

[node name="Button1" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button1"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button2" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button3" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button4" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button5" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button5"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button6" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button6"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button7" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button7"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button8" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button8"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button9" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button9"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button10" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button10"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button11" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button11"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button12" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button12"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button13" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button13"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button14" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button14"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button15" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button15"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button16" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button16"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button17" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button17"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="Button18" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
ignore_texture_size = true
stretch_mode = 3

[node name="ColorRect" type="ReferenceRect" parent="GridContainer/Button18"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="WeaponsRect" type="ColorRect" parent="."]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.105882, 0.117647, 0.0509804, 0.501961)

[node name="WeaponsList" type="VBoxContainer" parent="WeaponsRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="Label" parent="WeaponsRect/WeaponsList"]
layout_mode = 2
text = "WEAPONS"
label_settings = SubResource("LabelSettings_djehf")
horizontal_alignment = 1

[node name="Turret1" type="Button" parent="WeaponsRect/WeaponsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "TURRET"
icon = ExtResource("2_6bpic")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ColorRect" type="ReferenceRect" parent="WeaponsRect/WeaponsList/Turret1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="EmiGenerator" type="Button" parent="WeaponsRect/WeaponsList"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
text = "EMIGEN"
icon = ExtResource("3_ifrdv")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="ColorRect" type="ReferenceRect" parent="WeaponsRect/WeaponsList/EmiGenerator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
border_color = Color(0.368627, 0.494118, 0.796078, 1)
border_width = 4.0
editor_only = false

[node name="StatsRect" type="ColorRect" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2
size_flags_horizontal = 3
color = Color(0.105882, 0.117647, 0.0509804, 0.501961)

[node name="StatsList" type="VBoxContainer" parent="StatsRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderClicks" type="Label" parent="StatsRect/StatsList"]
layout_mode = 2
text = "RESERVES"
label_settings = SubResource("LabelSettings_djehf")
horizontal_alignment = 1

[node name="ClicksContainer" type="HBoxContainer" parent="StatsRect/StatsList"]
layout_mode = 2

[node name="Clicks" type="Label" parent="StatsRect/StatsList/ClicksContainer"]
layout_mode = 2
text = "CLICKS"
label_settings = SubResource("LabelSettings_iqlgw")

[node name="ClicksCount" type="Label" parent="StatsRect/StatsList/ClicksContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "10 "
label_settings = SubResource("LabelSettings_iqlgw")
horizontal_alignment = 2

[node name="HeaderStats" type="Label" parent="StatsRect/StatsList"]
layout_mode = 2
text = "PLANSTATS"
label_settings = SubResource("LabelSettings_djehf")
horizontal_alignment = 1

[node name="Turr1sContainer" type="HBoxContainer" parent="StatsRect/StatsList"]
layout_mode = 2

[node name="Turr1s" type="Label" parent="StatsRect/StatsList/Turr1sContainer"]
layout_mode = 2
text = "TURR1S"
label_settings = SubResource("LabelSettings_iqlgw")

[node name="Turr1sCount" type="Label" parent="StatsRect/StatsList/Turr1sContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "5 "
label_settings = SubResource("LabelSettings_iqlgw")
horizontal_alignment = 2

[node name="EmisContainer" type="HBoxContainer" parent="StatsRect/StatsList"]
layout_mode = 2

[node name="Emis" type="Label" parent="StatsRect/StatsList/EmisContainer"]
layout_mode = 2
text = "EMIS"
label_settings = SubResource("LabelSettings_iqlgw")

[node name="EmisCount" type="Label" parent="StatsRect/StatsList/EmisContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1 "
label_settings = SubResource("LabelSettings_iqlgw")
horizontal_alignment = 2

[node name="FooterRect" type="ColorRect" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -89.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.105882, 0.117647, 0.0509804, 0.501961)

[node name="FooterNotReady" type="Label" parent="FooterRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "NOT_READY"
label_settings = SubResource("LabelSettings_uo52u")
horizontal_alignment = 1

[node name="FooterReady" type="Label" parent="FooterRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "READY"
label_settings = SubResource("LabelSettings_uo52u")
horizontal_alignment = 1

[node name="FooterGameOver" type="Label" parent="FooterRect"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GAME_OVER"
label_settings = SubResource("LabelSettings_uo52u")
horizontal_alignment = 1

[node name="Description" type="HBoxContainer" parent="FooterRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 44.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ButStart" type="Button" parent="FooterRect/Description"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.368627, 0.494118, 0.796078, 1)
theme_override_colors/font_disabled_color = Color(0.129412, 0.203922, 0.396078, 1)
theme_override_font_sizes/font_size = 24
disabled = true
text = "START"

[node name="Separator" type="Control" parent="FooterRect/Description"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="ButQuit" type="Button" parent="FooterRect/Description"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.952941, 0.588235, 0.517647, 1)
theme_override_font_sizes/font_size = 24
text = "QUIT"

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="pressed" from="GridContainer/Button1" to="." method="_on_button_1_pressed"]
[connection signal="mouse_entered" from="WeaponsRect/WeaponsList/Turret1" to="." method="_play_hover"]
[connection signal="pressed" from="WeaponsRect/WeaponsList/Turret1" to="." method="_on_turret_1_pressed"]
[connection signal="mouse_entered" from="WeaponsRect/WeaponsList/EmiGenerator" to="." method="_play_hover"]
[connection signal="pressed" from="WeaponsRect/WeaponsList/EmiGenerator" to="." method="_on_emi_generator_pressed"]
[connection signal="mouse_entered" from="FooterRect/Description/ButStart" to="." method="_play_hover"]
[connection signal="pressed" from="FooterRect/Description/ButStart" to="." method="_on_but_start_pressed"]
[connection signal="mouse_entered" from="FooterRect/Description/ButQuit" to="." method="_play_hover"]
[connection signal="pressed" from="FooterRect/Description/ButQuit" to="." method="_on_but_quit_pressed"]
